--- a/ui/src/app/shared/permission/list/permission.list.html
+++ b/ui/src/app/shared/permission/list/permission.list.html
@@ -1,34 +1,55 @@
 <div class="permission">
-    <table class="ui fixed single line celled table">
+    <nz-table [nzData]="permissionsList" #permList>
         <thead>
             <tr>
-                <th class="four wide">{{ 'group_name' | translate }}</th>
-                <th class="four wide">{{ 'group_permission' | translate }}</th>
-                <th class="two wide"></th>
+                <th>Group name</th>
+                <th>Group permission</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let gp of getDataForCurrentPage()">
-                <td class="middle-aligned">
-                    <a [routerLink]="['/settings/group', gp.group.name]">{{ gp.group.name }}</a>
+            <tr *ngFor="let gp of permList.data">
+                <td>
+                    {{gp | json}}
+                    <!--a [routerLink]="['/settings/group', gp.group.name]">{{ gp.group.name }}</a-->
                 </td>
                 <td>
                     <div *ngIf="edit;then wPermission;else rPermission"></div>
                     <ng-template #wPermission>
-                        <div class="ui form">
-                            <sui-select class="selection" [isDisabled]="gp.updating" [(ngModel)]="gp.permission"
-                                (ngModelChange)="pushChange()" (selectedOptionChange)="gp.hasChanged = true"
-                                [optionFormatter]="formatPermission()" [hasLabels]="true" [options]="permissionsList"
-                                labelField="name" valueField="value">
-                                <sui-select-option *ngFor="let p of permissionsList" [value]="p"></sui-select-option>
-                            </sui-select>
-                        </div>
+                        <nz-select [nzDisabled]="gp.updating" [(ngModel)]="gp.permission"  (ngModelChange)="pushChange();gp.hasChanged = true">
+                            <nz-option *ngFor="let pp of permissionsList" [nzValue]="pp" nzLabel="{{pp.name | translate}}"></nz-option>
+                        </nz-select>
                     </ng-template>
                     <ng-template #rPermission>
                         <div class="ui fluid input">
                             {{ getPermissionName(gp.permission) | translate }}
                         </div>
                     </ng-template>
+                </td>
+                <td>
+                    <ng-container *ngIf="edit">
+                        <button nz-button nzType="primary" *ngIf="mode === 'submit' && gp.hasChanged" [nzLoading]="gp.updating"
+                                 [disabled]="gp.updating" name="btnupdateperm"
+                                (click)="sendEvent('update', gp)">
+                            <i nz-icon nzType="save" nzTheme="outline"></i>
+                            {{ 'btn_save' | translate}}
+                        </button>
+                        <app-delete-button *ngIf="mode === 'submit' && !gp.hasChanged" [loading]="gp.updating"
+                                           (event)="sendEvent('delete', gp)"></app-delete-button>
+                        <button nz-button *ngIf="mode === 'form'" (click)="sendEvent('delete', gp)"><i
+                                class="trash icon"></i></button>
+                    </ng-container>
+                </td>
+            </tr>
+        </tbody>
+    </nz-table>
+    <!--table class="ui fixed single line celled table">
+
+        <tbody>
+            <tr *ngFor="let gp of getDataForCurrentPage()">
+
+                <td>
+
                 </td>
                 <td class="center">
                     <ng-container *ngIf="edit">
@@ -46,21 +67,6 @@
                 </td>
             </tr>
         </tbody>
-        <tfoot *ngIf="getNbOfPages() > 1">
-            <tr>
-                <th colspan="3">
-                    <div class="ui right floated pagination menu">
-                        <a class="icon item" (click)="downPage()">
-                            <i class="left chevron icon"></i>
-                        </a>
-                        <a class="item" *ngFor="let page of getNbOfPages() | ngForNumber" (click)="goTopage(page)"
-                            [class.active]="currentPage === page">{{page}}</a>
-                        <a class="icon item" (click)="upPage()">
-                            <i class="right chevron icon"></i>
-                        </a>
-                    </div>
-                </th>
-            </tr>
-        </tfoot>
-    </table>
+
+    </table-->
 </div>
