feat: remove semantic from permission

--- a/ui/src/app/shared/permission/form/permission.form.html
+++ b/ui/src/app/shared/permission/form/permission.form.html
@@ -1,46 +1,54 @@
-<form class="ui form" *ngIf="ready" (ngSubmit)="create()">
-    <div class="fields">
-        <div class="seven wide field">
-            <label>Group name <a class="group-help" suiPopup [popupTemplate]="popupHelp" popupTrigger="outsideClick"
-                    popupPlacement="bottom">My group is not listed</a></label>
-            <sui-select *ngIf="!manual" class="fluid selection" (selectedOptionChange)="selectGroup($event)"
-                [options]="groupList" [isSearchable]="true" valueField="name" #nameSelect name="group-name"
-                [optionTemplate]="optionNameTemplate">
-                <sui-select-option *ngFor="let option of nameSelect.filteredOptions" [value]="option">
-                </sui-select-option>
-            </sui-select>
-            <ng-template let-option #optionNameTemplate>
-                {{option.name}}{{option.organization ? ' (' + option.organization + ')' : ''}}
-            </ng-template>
-            <input *ngIf="manual" type="text" name="group-name" [(ngModel)]="newGroupPermission.group.name">
-            <ng-template let-popup #popupHelp>
-                <div class="group-help-popup">
-                    <span>You'll see only your groups in this list.</span>
-                    <span>If you need to add read permission to another group you can manually enter its name.</span>
-                    <button type="button" class="ui icon blue button"
-                        (click)="switchManualInput();popup.close();">Switch text
-                        input</button>
-                </div>
-            </ng-template>
-        </div>
-        <div class="five wide field">
-            <label>{{'group_permission' | translate}}</label>
-            <sui-select class="fluid selection" [(ngModel)]="newGroupPermission.permission" [options]="permissionList"
-                valueField="value" #levelSelect name="permission-level" [optionTemplate]="optionLevelTemplate">
-                <sui-select-option *ngFor="let option of levelSelect.filteredOptions" [value]="option">
-                </sui-select-option>
-            </sui-select>
-            <ng-template let-option #optionLevelTemplate>
-                {{option.name | translate}}
-            </ng-template>
-        </div>
-        <div class="two wide center field">
-            <button *ngIf="buttonType === 'submit'" type="submit" class="ui green button" [class.loading]="loading"
-                [class.disabled]="loading || !newGroupPermission.group.name || newGroupPermission.group.name === ''"><i
-                    class="save icon"></i>{{ 'btn_save' | translate }}</button>
-            <button *ngIf="buttonType === 'button'" type="submit" class="ui icon blue button" [class.loading]="loading"
-                [class.disabled]="loading || !newGroupPermission.group.name || newGroupPermission.group.name === ''"><i
-                    class="plus icon"></i></button>
-        </div>
-    </div>
+<form nz-form *ngIf="ready" (ngSubmit)="create()" nzLayout="vertical">
+    <nz-row>
+        <nz-col nzSpan="10">
+            <nz-form-item>
+                <nz-form-label class="helperLabel">
+                    Group name
+                    <a class="group-help" nzPopoverTrigger="click"
+                                   nz-popover [nzPopoverContent]="popupHelp" [(nzPopoverVisible)]="helpVisible" nzPopoverPlacement="top">(My group is not listed)</a>
+                        <ng-template let-popup #popupHelp>
+                            <div class="group-help-popup">
+                                <span>You'll see only your groups in this list.</span>
+                                <span>If you need to add read permission to another group you can manually enter its name.</span>
+                                <button nz-button nzType="primary" nzBlock
+                                        (click)="switchManualInput();helpVisible = false;">Switch text
+                                    input</button>
+                            </div>
+                        </ng-template>
+                </nz-form-label>
+                <nz-form-control>
+                    <nz-select nzShowSearch *ngIf="!manual" [(ngModel)]="newGroupPermission.group.name" (ngModelChange)="selectGroup($event)" name="group-name">
+                        <nz-option *ngFor="let option of groupList" nzLabel=" {{option.name}}{{option.organization ? ' (' + option.organization + ')' : ''}}"
+                                   [nzValue]="option.name"></nz-option>
+                    </nz-select>
+                    <input nz-input *ngIf="manual" name="group-name" [(ngModel)]="newGroupPermission.group.name">
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+        <nz-col nzSpan="10">
+            <nz-form-item>
+                <nz-form-label>
+                    Group permission
+                </nz-form-label>
+                <nz-form-control>
+                    <nz-select nzShowSearch [(ngModel)]="newGroupPermission.permission" name="perm-name">
+                        <nz-option *ngFor="let option of permissionList" nzLabel="{{option.name | translate}}" [nzValue]="option.value"></nz-option>
+                    </nz-select>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+        <nz-col nzSpan="2">
+            <nz-form-item>
+                <nz-form-label></nz-form-label>
+                <nz-form-control>
+                    <button *ngIf="buttonType === 'submit'" nz-button nzType="primary" [nzLoading]="loading" [disabled]="loading || !newGroupPermission.group.name || newGroupPermission.group.name === ''">
+                        <i nz-icon nzType="save" nzTheme="outline"></i>Save
+                    </button>
+                    <button *ngIf="buttonType === 'button'" nz-button nzType="primary" [nzLoading]="loading"
+                            [disabled]="loading || !newGroupPermission.group.name || newGroupPermission.group.name === ''">
+                        <i nz-icon nzType="plus" nzTheme="outline"></i></button>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+    </nz-row>
 </form>
